Fixed mobile navbar text to be aligned to the right side, matching the menu toggle icon

--- a/styles/StrataStyle.css
+++ b/styles/StrataStyle.css
@@ -327,6 +327,7 @@ footer a:hover {
         font-size: 1.5rem;
         padding: .5rem 1rem .5rem .5rem;
         background-image: none;
+        text-align: right;
     }
 
     .navbar a.icon {
